--- a/OnlineGPsExperiment/configs/config_doegp_CPU Small.yaml
+++ b/OnlineGPsExperiment/configs/config_doegp_CPU Small.yaml
@@ -1,4 +1,4 @@
-offsets: [0.0225, -0.0325, -0.02, 0.0, 0.0375]
+offsets: [0.0, -0.075, -0.02, -0.045, 0.0375, -0.055, 0.02]
 ax_inset_bbox: [0.0, 0.15, 0.9, 1.2]
 ax_sci_notation: true
 N_start: 250
