--- a/OnlineGPsExperiment/configs/config_doegp_CaData.yaml
+++ b/OnlineGPsExperiment/configs/config_doegp_CaData.yaml
@@ -1,4 +1,4 @@
-offsets: [0.0175, 0.0, 0.0575, -0.00, 0.04]
+offsets: [-0.00, -0.0175, 0.06, -0.02, 0.02, 0.04, 0.08]
 ax_inset_bbox: [0.0, 0.4, 0.9, 1.2]
 ax_sci_notation: true
 N_start: 250
