--- a/OnlineGPsExperiment/configs/config_doegp_Elevators.yaml
+++ b/OnlineGPsExperiment/configs/config_doegp_Elevators.yaml
@@ -1,4 +1,4 @@
-offsets: [0.025, -0.05, -0.027, -0.0, 0.05]
+offsets: [0.025, -0.105, -0.055, -0.027, 0.05, -0.078, 0.0]
 ax_inset_bbox: [0.0, 0.15, 0.9, 1.2]
 ax_sci_notation: true
 N_start: 250
