--- a/OnlineGPsExperiment/configs/config_doegp_Kuka #1.yaml
+++ b/OnlineGPsExperiment/configs/config_doegp_Kuka #1.yaml
@@ -1,4 +1,4 @@
-offsets: [-0.09, -0.06, 0.03, 0.12, -0.03]
+offsets: [-0.09, -0.06, 0.10, 0.18, -0.03, 0.03, 0.25]
 ax_inset_bbox: [0.0, 0.15, 0.9, 1.2]
 ax_sci_notation: true
 N_start: 500
