--- a/OnlineGPsExperiment/configs/config_doegp_SARCOS.yaml
+++ b/OnlineGPsExperiment/configs/config_doegp_SARCOS.yaml
@@ -1,4 +1,4 @@
-offsets: [-0.03, -0.06, 0.06, -0.005, 0.03]
+offsets: [0.005, -0.0875, 0.06, -0.04, 0.03, -0.07, 0.09]
 N_start: 250
 ax_sci_notation: true
 make_inset_plot: true
